# market-fiscal

./: .gitignore  README.md  app.py  pyproject.toml  python-ocr.py  python_ocr.py  requirements.txt
